# AirPlaneDetection

./: .gitignore  README.md  colab_train.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml  dataset.yaml  training.yaml
scripts/: download.py  evaluate.py  predict.py  test.py  train.py  val.py
src/: dataset.py  loss.py  metrics.py  model.py  transform.py  utils.py
