[project]
name = "airplane-detection"
version = "0.3.0"
description = "YOLO-based airplane detection on VHR satellite imagery (HRPlanes)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "zenodo_get>=1.3.4",
]

[project.scripts]
download = "scripts.download:main"
train    = "scripts.train:main"
val      = "scripts.val:run"
test     = "scripts.test:run"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
